syntax = "proto3";
package greptime.v1;

option java_package="org.greptimedb.v1";
option java_outer_classname = "Common";

message ExprHeader {
  uint32 version = 1;
}

message ResultHeader {
  uint32 version = 1;
  uint32 code = 2;
  string err_msg = 3;
}

message MutateResult {
  uint32 success = 1;
  uint32 failure = 2;
}
