syntax = "proto3";
package greptime.v1;

option java_package="org.greptimedb.v1";
option java_outer_classname = "GreptimeDB";

import "admin.proto";
import "database.proto";

service Greptime {
  rpc Batch(BatchRequest) returns (BatchResponse) {}
}

message BatchRequest {
  repeated AdminRequest admins = 1;
  repeated DatabaseRequest databases = 2;
}

message BatchResponse {
  repeated AdminResponse admins = 1;
  repeated DatabaseResponse databases = 2;
}
